--- a/templates/custom.html
+++ b/templates/custom.html
@@ -7,7 +7,7 @@
     <p style="color:red;">{{ message }}</p>
   {% endif %}
 
-  <h1>Choose different weights for {{ book }}</h1>
+  <h1>Choose different weights for "{{ book }}"</h1>
 
   <form action="/search_custom" method="post">
     <!-- <-- IMPORTANT: send the book in the POST so the server knows context -->
@@ -31,14 +31,12 @@
       {% endfor %}
     </select>
 
-    <button type="submit">Search</button>
+    <button type="submit" class="button">Search</button>
   </form>
 
 
-  <a href="/">
-    <button>
+  <a href="/" class="button">
         Return
-    </button>
   </a>
 
 {% endblock %}
