--- a/templates/error.html
+++ b/templates/error.html
@@ -2,11 +2,9 @@
 
 {% block body %}
 
-<h1> {{ message }}</h1>
+<p class="error"> {{ message }}</h1>
 
-<a href="/">
-    <button>
+<a href="/" class="button" id="error_button">
         Return
-    </button>
 </a>
 {% endblock %}
