--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h1>Find Similar Books</h1>
 <form action="/search" method="POST">
     <input autocomplete="off" autofocus name="book_title" placeholder="Enter a book" type="text">
-    <button type="submit">Search</button>
+    <button type="submit" class="button">Search</button>
 </form>
 
 
