--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,9 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Recommendation System</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    {% block body %} {% endblock %}
+    <div class="container">
+        {% block body %} {% endblock %}
+    </div>
 
 </body>
 </html>
