--- a/templates/results.html
+++ b/templates/results.html
@@ -2,11 +2,11 @@
 
 {% block body %}
 
-<h1>Similar books for {{ book }}:</h1>
+<h1>Similar books for "{{ book }}"":</h1>
     <ol>
         {% for rec in recommendations %}
             <li>
-                {{rec.title }} by {{rec.author}}, rating = {{rec.rating}}, similarity = {{rec["similarity score"]}}
+                "{{rec.title }}"" by {{rec.author}}, rating = {{rec.rating}}, similarity = {{rec["similarity score"]}}
             </li>
         {% endfor %}
         
@@ -14,7 +14,7 @@
     </ol>
 
 
-    <a href="/">
+    <a href="/" class="button">
         <button>
             Search a new book
         </button>
